# products-api

./: Cargo.toml  README.md  clean_products.csv  products-for-api.csv  test_products.csv
src/: auth.rs  config.rs  handlers.rs  main.rs  models.rs
