[package]
name = "products-json-api"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
actix-web = "4.0"
mongodb = "2.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
