[package]
name = "products-json-api"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
actix-web = "4.0"
actix-multipart = "0.6"
actix-cors = "0.6"  # Added CORS support
mongodb = "2.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
csv = "1.3"
futures-util = "0.3"
tempfile = "3.10"
regex = "1.10"
jsonwebtoken = "9.2"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }
rand = "0.8"
